--- a/atividade/paginas/func.html
+++ b/atividade/paginas/func.html
@@ -7,13 +7,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="../css/style.css" />
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <title>jquery</title>
+        <title>Dados usuário</title>
     </head>
     <body>
         <header>
             <h1>Gestão de usuários</h1>
-             <p id="nomeLogado"></p>
-            <p id="cargo"></p>
+            <div id="logado">
+            <p id="nomeLogado"> </p>
+            <p id="cargo"> </p>
+            <a id="sair" href="login.html">Sair</a>
+            </div>
+            
         </header>
         <div class="container">
          <form id="formUser">
