--- a/atividade/paginas/login.html
+++ b/atividade/paginas/login.html
@@ -17,8 +17,9 @@
             <form id="formUserLogin">
                 <h2>Login</h2>
                 <input type="text" id="email" placeholder="informe o email" />
-                <input type="text" id="senha" placeholder="informe a senha" />
+                <input type="password" id="senha" placeholder="informe a senha" />
                 <button type="submit">login</button>
+                <p> Não possui cadastro? <a href="cadastro.html">cadastre-se</a></p>
             </form>
             <div id="mensagem"></div>
         </div>
