--- a/atividade/paginas/cadastro.html
+++ b/atividade/paginas/cadastro.html
@@ -22,13 +22,15 @@
                    <input type="text" id="email" placeholder="informe o email" />
                    <input type="password" id="senha" placeholder="informe a senha" />
                    
-                </div>
+                
                 <button type="submit">Realizar cadastro</button>
+                <p> Ja possui cadastro? <a href="login.html">Realizar login</a></p>
+            </div>
             </form>
             <div id="mensagem"></div>
         </div>
         <footer>
-            <p>&copy; 2025</p>
+            <p>&copy;2025</p>
         </footer>
         <script src="../js/data.js"></script>
         <script src="../js/app.js"></script>
